.archive/communication/continuwuity/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: communication
spec:
  hostnames:
    - "matrix.vzkn.eu"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: continuwuity
          port: 8080
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity-wellknown
  annotations:
    gatus.home-operations.com/enabled: "false"
  labels:
    external-dns/exclude: "true"
spec:
  hostnames:
    - "vzkn.eu"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
      backendRefs:
        - name: continuwuity
          port: 8080
